# mpegts-rust

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  HISTORY.md  PLAN.md  README.md  ts-engine-dashboard-ARCHITECTURE.md
.github/workflows/: ci.yml
crates/ts-analyzer/: Cargo.toml
crates/ts-analyzer/src/: bitrate_stats.rs  capacity.rs  continuity.rs  frame_index.rs  lib.rs  output_stats.rs  pcr_jitter.rs  pid_detail.rs  stream_info.rs  system_stats.rs  tr101290.rs
crates/ts-core/: Cargo.toml
crates/ts-core/src/: bitrate.rs  crc32.rs  descriptors.rs  lib.rs  muxer.rs  packet.rs  packet_builder.rs  pes.rs  pid.rs  psi_builder.rs  scte35.rs  timing.rs
crates/ts-core/src/psi/: mod.rs  nit.rs  pat.rs  pmt.rs  sdt.rs
crates/ts-core/tests/: muxer_test.rs  packet_test.rs
crates/ts-decoder/: Cargo.toml
crates/ts-decoder/src/: aac.rs  ac3.rs  bitreader.rs  h264.rs  h265.rs  lib.rs  thumbnail.rs
crates/ts-server/: Cargo.toml
crates/ts-server/src/: main.rs  state.rs
crates/ts-server/src/api/: analyze.rs  history.rs  ingest.rs  mod.rs  output.rs  pid.rs  stream.rs  system.rs  tr101290.rs
crates/ts-server/src/db/: mod.rs  repository.rs  schema.rs
crates/ts-server/src/ingest/: file.rs  http.rs  mod.rs  udp.rs
crates/ts-server/src/output/: mod.rs  pacer.rs  rtp.rs  session.rs  udp.rs
crates/ts-server/src/ws/: realtime.rs
dashboard/: package-lock.json  package.json  svelte.config.js  vite.config.ts
dashboard/src/: app.css  app.html
dashboard/src/lib/: api.ts  ws.ts
dashboard/src/lib/components/: BitrateChart.svelte  CcErrors.svelte  FrameTimeline.svelte  HexViewer.svelte  IngestControl.svelte  OutputControl.svelte  PcrTimeline.svelte  PidMap.svelte  PsiViewer.svelte  Scte35Log.svelte  StreamSummary.svelte  SystemLoad.svelte  ThumbnailStrip.svelte  Tr101290Dashboard.svelte  TxBitrateChart.svelte
dashboard/src/lib/stores/: stream.svelte.ts
dashboard/src/lib/types/: index.ts
dashboard/src/routes/: +layout.svelte  +page.svelte
dashboard/src/routes/errors/: +page.svelte
dashboard/src/routes/history/: +page.svelte
dashboard/src/routes/output/: +page.svelte
dashboard/src/routes/pid/[pid]/: +page.svelte
dashboard/src/routes/scte35/: +page.svelte
scripts/: dev.sh  prod.sh  test.sh
