[workspace]
resolver = "2"
members = [
    "crates/ts-core",
    "crates/ts-analyzer",
    "crates/ts-server",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
bytes = "1"
