[workspace]
resolver = "2"
members = [
    "crates/ts-core",
    "crates/ts-analyzer",
    "crates/ts-decoder",
    "crates/ts-server",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
bytes = "1"
