[package]
name = "ts-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ts-core = { path = "../ts-core" }
ts-analyzer = { path = "../ts-analyzer" }
ts-decoder = { path = "../ts-decoder" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
